# issuegator

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
.homebrew/: issuegator.rb
src/: main.rs
